--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+#(name: CI Pipeline
 
 on:
   push:
@@ -22,3 +22,29 @@ jobs:
        - name: Run deployment script
          run: ./deploy.sh
 
+)
+
+
+name: CI Pipeline
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run sample command
+        run: echo "CI pipeline running successfully"
+
+      - name: Give execute permission
+        run: chmod +x deploy.sh
+
+      - name: Run deployment script
+        run: ./deploy.sh
